api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME} #服务名
  labels:
    app: ${SERVICE_NAME} #服务名
spec:
  replicas: 1 #副本
  selector:
    matchLabels:
      app: ${SERVICE_NAME} #服务名
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME} #服务名
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "${SERVICE_NAME}" #服务名
        dapr.io/app-port: "80"
        dapr.io/config: "zipkin" #pileline：经过授权认证，zipkin:不经过授权认证
        dapr.io/sidecar-listen-addresses: "0.0.0.0"
    spec:
      containers:
      - name: ${SERVICE_NAME} #服务名
        image: ${REGISTRY_HOST_IMAGE} #改成harbor上的镜像地址
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: harborlogin

---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME} #服务名
spec:
  type: ClusterIP
  selector:
    app: ${SERVICE_NAME} #服务名
  ports:
    - port: 80
      targetPort: 3500
