devicesvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device #服务名
  labels:
    app: device #服务名
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device #服务名
  template:
    metadata:
      labels:
        app: device #服务名
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "device" #服务名
        dapr.io/app-port: "80"
        dapr.io/config: "zipkin"
        dapr.io/sidecar-listen-addresses: "0.0.0.0"
    spec:
      containers:
      - name: device
        image: 120.77.8.172:3305/library/xjdeviceservice:latest #改成har上的镜像地址
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: harborlogin

---
apiVersion: v1
kind: Service
metadata:
  name: device #服务名
spec:
  type: ClusterIP
  selector:
    app: device #服务名
  ports:
    - port: 80
      targetPort: 3500
