envoy - 副本.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/v1.0/device/"
                          name: "dev"
                          route:
                            prefix_rewrite: "/v1.0/invoke/device/method/"
                            cluster: dev
                        - match:
                            prefix: "/v1.0/test/"
                          name: "ts"
                          route:
                            prefix_rewrite: "/v1.0/invoke/test/method/"
                            cluster: test

  clusters:
    - name: dapr
      type: strict_dns
      connect_timeout: 15s
      load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3500
    - name: dev
      type: logical_dns
      connect_timeout: 15s
      load_assignment:
        cluster_name: dev
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: device
                      port_value: 80
    - name: test
      type: logical_dns
      connect_timeout: 15s
      load_assignment:
        cluster_name: test
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: test
                      port_value: 80
